<resources>
    <string name="app_name">Librería</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="lblTitulo">Titulo</string>
    <string name="lblAutor">Autor</string>
    <string name="lblISBN">ISBN</string>
    <string name="lblGenero">Genero</string>
    <string name="lblDisponibles">Disponibles</string>
    <string name="lblOcupados">Ocupados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>