<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="8dp"
    android:backgroundTint="#ED8876"
    tools:context=".GuardarLibroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/lbl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTitulo" />

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lbl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAutor" />

        <EditText
            android:id="@+id/txtAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lbl3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblISBN" />

        <EditText
            android:id="@+id/txtISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lbl4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGenero" />

        <EditText
            android:id="@+id/txtGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lbl5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDisponibles" />

        <EditText
            android:id="@+id/txtDisponibles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lbl6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblOcupados" />

        <EditText
            android:id="@+id/txtOcupados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="70dp"
                android:layout_weight="1"
                android:backgroundTint="#ED8876"
                android:text="Guardar" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_weight="1"
                android:backgroundTint="#ED8876"
                android:text="Volver" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>